# catheter

./: .gitignore  README.md  Retrieval_angle.py  Retrieval_by_Detection.py  Retrieval_by_Detection_A4.py  Retrieval_by_Detection_offset.py  Retrieval_integration.py  Retrieval_integration.yaml  Retrieval_integration_comntinuous.py  Retrieval_integration_editing.py  Storage_by_Detection2.py  Strage_integration.py  after_cuda_fix.txt  before_cuda_fix.txt  calibrate_gripper.py  control  env_info_modules_only.txt  fixed_apt_plus.txt  fixed_pip_plus.txt  infer.py  linear_lift.py  master_20260216.json  master_20260225_tohan.json  master_2026107.json  master_2026109.json  requirements_204.txt  requirements_apt.txt  requirements_clean.txt  requirements_gpu.txt  requirements_pip.txt  retrieval_test.py  xArm7コマンド
Dynamixel_win_pro_hand_book/: Demo_Storage.py  HandBook_Retrieval.py  HandBook_Retrieval_ver2.py  HandBook_Storage.py  README.md  Retrieval_Sequence.py  Storage_Sequence.py  connection_test.py  dynamixel_classes_for_windows.py  dynamixel_cross_platform.py  id_1_gripper_pos_check.py  id_2_sp_rot_pos_check.py  id_3_sp_lin_pos_check.py  kbhit.py  kbhit_lin.py  requirements_win.txt  sample_position.py  sample_velocity.py  test_hand_storage.py
Dynamixel_win_pro_hand_book/config/: Dynamixel_config.yaml  Dynamixel_config_2.yaml
Dynamixel_win_pro_hand_book/util/: cfg_dict_loader.py
barcode/: FixToAMRCoordinate.py  FixToCameraCoordinate.py  ShelfBarcodeDetection.py  book_shelf.py  test.py
ros2_ws/src/xarm7_moveit_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/xarm7_moveit_cpp/action/: MoveTCP.action
ros2_ws/src/xarm7_moveit_cpp/launch/: move_tcp_x.launch.py
ros2_ws/src/xarm7_moveit_cpp/src/: move_tcp_action_server.cpp  move_tcp_x.cpp
ros2_ws/src/xarm7_moveit_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/xarm7_moveit_msgs/action/: MoveTCP.action
rs_d435i/: get_book_position.py
xarm7/: MoveBarcode.py  calculate_Homogeneous_transformation_matrix.py  calibration_valid _pnp.py  calibration_valid.py  handeye_reach_verify_reloc_20260209_133658_437.json  handeye_verify_20260207_002120_930.json  handeye_verify_20260207_214838_311.json  handeye_verify_20260207_215143_582.json  save_pose_pair.py  tcp_pivot_calibration.py
xarm7/config/: level_to_mm.json
xarm7/control/: Move_to_Container.py  ar_marker_pose.py  book_return_sequence.py  move_to_container_test.py  robot_base_coordinate.py  robot_helper.py  shelf_id_manager.py  xarm7.py  xarm_capture_to_init.py  xarm_capture_to_init_fixed.py  xarm_init_to_capture.py  xarm_init_to_capture_integration.py  xarm_init_to_capture_left.py  xarm_monitor.py  xarm_test.py
xarm7/handeye_pairs/: handeye_T_tcp_cam_20251220_102449.json  handeye_T_tcp_cam_20251220_113027.json  (+78 more)
(+176 files in other folders)
