<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>xarm7_moveit_msgs</name>
  <version>0.0.0</version>

  <description>
    Action interface definitions for MoveTCP control of xArm7 using MoveIt.
  </description>

  <maintainer email="book@your.domain">book</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>trajectory_msgs</depend>

  <!-- required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- test (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
